--- a/tictactoeAI/tictactoeAI/MainWindow.xaml
+++ b/tictactoeAI/tictactoeAI/MainWindow.xaml
@@ -19,18 +19,19 @@
             <RowDefinition Height="200"/>
             <RowDefinition Height="50"/>
         </Grid.RowDefinitions>
-        <Button x:Name="btn1" FontSize="100" Content=" " Background="White" Grid.Column="0" Grid.Row="1" Click="btn1_Click"></Button>
-        <Button x:Name="btn2" FontSize="100" Content=" " Background="White" Grid.Column="1" Grid.Row="1" Click="btn2_Click"></Button>
-        <Button x:Name="btn3" FontSize="100" Content=" " Background="White" Grid.Column="2" Grid.Row="1" Click="btn3_Click"></Button>
-        <Button x:Name="btn4" FontSize="100" Content=" " Background="White" Grid.Column="0" Grid.Row="2" Click="btn4_Click"></Button>
-        <Button x:Name="btn5" FontSize="100" Content=" " Background="White" Grid.Column="1" Grid.Row="2" Click="btn5_Click"></Button>
-        <Button x:Name="btn6" FontSize="100" Content=" " Background="White" Grid.Column="2" Grid.Row="2" Click="btn6_Click"></Button>
-        <Button x:Name="btn7" FontSize="100" Content=" " Background="White" Grid.Column="0" Grid.Row="3" Click="btn7_Click"></Button>
-        <Button x:Name="btn8" FontSize="100" Content=" " Background="White" Grid.Column="1" Grid.Row="3" Click="btn8_Click"></Button>
-        <Button x:Name="btn9" FontSize="100" Content=" " Background="White" Grid.Column="2" Grid.Row="3" Click="btn9_Click"></Button>
+        <Button x:Name="btn1" FontSize="100" Content=" " Background="White" Grid.Column="0" Grid.Row="1" Click="Allbutton_Click"></Button>
+        <Button x:Name="btn2" FontSize="100" Content=" " Background="White" Grid.Column="1" Grid.Row="1" Click="Allbutton_Click"></Button>
+        <Button x:Name="btn3" FontSize="100" Content=" " Background="White" Grid.Column="2" Grid.Row="1" Click="Allbutton_Click"></Button>
+        <Button x:Name="btn4" FontSize="100" Content=" " Background="White" Grid.Column="0" Grid.Row="2" Click="Allbutton_Click"></Button>
+        <Button x:Name="btn5" FontSize="100" Content=" " Background="White" Grid.Column="1" Grid.Row="2" Click="Allbutton_Click"></Button>
+        <Button x:Name="btn6" FontSize="100" Content=" " Background="White" Grid.Column="2" Grid.Row="2" Click="Allbutton_Click"></Button>
+        <Button x:Name="btn7" FontSize="100" Content=" " Background="White" Grid.Column="0" Grid.Row="3" Click="Allbutton_Click"></Button>
+        <Button x:Name="btn8" FontSize="100" Content=" " Background="White" Grid.Column="1" Grid.Row="3" Click="Allbutton_Click"></Button>
+        <Button x:Name="btn9" FontSize="100" Content=" " Background="White" Grid.Column="2" Grid.Row="3" Click="Allbutton_Click"></Button>
         <Label x:Name="lblturn"  FontSize="30" Content="X his turn" Grid.Column="2" Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Label x:Name="lblTitle"  FontSize="30" Content="Tic Tac Toe" Grid.Column="1" Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Button x:Name="btnRestart" FontSize="20" Content="Restart" Background="White" Grid.Column="2" Grid.Row="4" Click="btnRestart_Click"></Button>
         <Button x:Name="btnAI" FontSize="20" Content="AI OFF" Background="White" Grid.Column="0" Grid.Row="4" Click="btnAI_Click"></Button>
+        <Button x:Name="btnHint" FontSize="20" Content="Hint" Grid.Column="1" Background="White" Grid.Row="4" Click="Hint"/>
     </Grid>
 </Window>
